<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:key="pref_as_bg_service"
        android:title="@string/run_as_service"
        android:summary="@string/run_as_service_summary"
        android:defaultValue="false"/>
    <SwitchPreferenceCompat
        android:key="pref_start_at_boot"
        android:title="@string/start_at_boot"
        android:summary="@string/start_service_at_boot"
        android:defaultValue="false"/>
    <SwitchPreferenceCompat
        android:key="pref_flip_vertically"
        android:title="@string/flip_vertically"
        android:summary="@string/flip_vertically_summary"
        android:defaultValue="false"/>
    <SwitchPreferenceCompat
        android:key="pref_maps_nav"
        android:title="Navegación Google Maps"
        android:summary="Envía instrucciones de giro y distancia al auto"
        android:defaultValue="false"/>
    <EditTextPreference
        android:key="pref_remote_mac_address"
        android:title="@string/remote_mac_address"
        android:inputType="textCapCharacters"
        android:summary="@string/remote_mac_address_default"
        android:defaultValue="@string/remote_mac_address_default"/>
    <SwitchPreferenceCompat
        android:key="pref_security_lock"
        android:title="Bloqueo de Seguridad"
        android:summary="Pedir huella o PIN al abrir la aplicación"
        android:defaultValue="false"/>
</PreferenceScreen>
